# chromatic-poe

./: .env  .env.gh-pages  .env.production  .gitignore  CHANGELOG.md  DEVELOPING.md  LICENSE  README.md  SPEC.md  biome.json  cliff.toml  index.html  package.json  pnpm-lock.yaml  release-please-config.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/scripts/: upsert-release.sh
.github/workflows/: data-pipeline.yaml  data.yaml  deploy.yaml  publish.yaml  release.yaml
app/data/: extract.ts  tsconfig.json
app/data/lib/: bundle.ts  cadence.test.ts  cadence.ts  dat.ts  db.ts  manifest.test.ts  manifest.ts  minimap.ts  mods.ts  notify.ts  poeladder.ts  versions.ts  wiki.ts
app/frontend/: app.css  app.tsx
app/frontend/components/: choose-dir.tsx  progress.tsx  settings.tsx  sound-player.tsx  theme.tsx  tooltip.tsx
app/frontend/icons/: alert-triangle.tsx  arrow-left.tsx  audio.tsx  chevron-down.tsx  exit.tsx  eye.tsx  index.ts  minimise.tsx  palette.tsx  plus.tsx  redo.tsx  settings.tsx  sun.tsx  trash.tsx  undo.tsx  upload.tsx
app/frontend/lib/: action.ts  art.ts  bundle.ts  commands.ts  condition.test.ts  condition.ts  config.ts  dat.test.ts  dat.ts  data-release.ts  db.ts  fetch.ts  filter.test.ts  filter.ts  fonts.ts  html.test.ts  html.ts  idb.ts  import.ts  input.ts  items.ts  mods.test.ts  mods.ts  poeladder.ts  queries.test.ts  queries.ts  sounds.ts  stat-descriptions.test.ts  stat-descriptions.ts  update.ts  utils.ts  wiki.ts
app/frontend/store/: index.ts
app/frontend/ui/: alert-dialog.tsx  avatar.tsx  breadcrumb.tsx  button.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  label.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  select.tsx  separator.tsx  sonner.tsx  switch.tsx  toggle-group.tsx  toggle.tsx
app/proxy/: handler.ts  wrangler.jsonc
app/tauri/: Cargo.toml  tauri.conf.json
app/tauri/capabilities/: default.json
app/tauri/icons/: icon.icns
app/tauri/src/: lib.rs  main.rs
apps/backend/: Cargo.toml  tauri.conf.json
apps/backend/capabilities/: default.json  desktop.json
apps/backend/icons/: icon.icns
apps/backend/src/: filter.rs  lib.rs
apps/frontend/: app.css  app.tsx  constants.ts  index.tsx  types.ts
apps/frontend/components/: background.tsx  choose-dir.tsx  chooseDir.tsx  loading.tsx  progress.tsx  search.tsx  settings.tsx  sound-player.tsx  theme.tsx  toast-progress.tsx  tooltip.tsx  update-data.tsx
apps/frontend/icons/: download.tsx  index.ts  load-circle.tsx  refresh.tsx
apps/frontend/lib/: action.ts  art.ts  bc7.ts  bundle.ts  condition.ts  config.ts  dat.ts  db.ts  dds.ts  filter.ts  idb.ts  import.ts  input.ts  items.ts  minimap.ts  mods.ts  queries.ts  sounds.ts  storage.ts  undo.ts  update-data.tsx  update.ts  utils.ts  wiki.ts
apps/frontend/lib/filter/: index.ts  (+11 more)
apps/frontend/services/: filter.ts  input.ts  storage.ts
apps/frontend/store/: index.ts
apps/frontend/ui/: alert-dialog.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  checkbox.tsx  combo-box.tsx  context-menu.tsx  dialog.tsx  label.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  select.tsx  separator.tsx  slider.tsx  sonner.tsx  switch.tsx  text-field.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
ci/: extract.sh  release.sh  setup.sh
legacy-data/: bundle.ts  dat.ts  file.ts  loader.ts  minimap.ts  table.ts
scripts/: filter-roundtrip.ts
(+63 files in other folders)
