[package]
name = "chromatic"
version = "0.7.0"
description = "PoE Filter Tool"
authors = ["jchantrell"]
edition = "2021"

[lib]
name = "chromatic_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri = { version = "2.0.6", features = [] }
winapi = { version = "0.3", features = ["winuser", "winnt", "winbase"] }
user32-sys = "0.2.0"
tauri-plugin-opener = "2.2.2"
tauri-plugin-process = "2"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
