[package]
name = "chromatic"
version = "0.11.2"
description = "PoE Filter Tool"
authors = ["jchantrell"]
edition = "2021"

[lib]
name = "chromatic_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef", default-features = false, features = ["xdg-portal"] }
tauri-plugin-os = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", features = ["cef"] }
winapi = { version = "0.3", features = ["winuser", "winnt", "winbase"] }
user32-sys = "0.2.0"
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-process = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-http = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
rustls = { version = "0.23", features = ["ring"] }
tauri-runtime-cef = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-utils = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-runtime = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-plugin = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
