[package]
name = "chromatic"
version = "0.1.0"
description = "PoE Filter Tool"
authors = ["jchantrell"]
edition = "2021"

[lib]
name = "chromatic_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri = { version = "2.0.6", features = [] }

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }
